# stellar-verify

./: .gitignore  .gitmodules  Cargo.toml  README.md
stellar/atomic-swap/: Cargo.toml
stellar/atomic-swap/src/: lib.rs
stellar/otter-stellar-verify/: Cargo.toml
stellar/otter-stellar-verify/src/: address.rs  auth.rs  bytes.rs  crypto.rs  deploy.rs  env.rs  events.rs  ledger.rs  lib.rs  map.rs  prng.rs  random.rs  storage.rs  string.rs  symbol.rs  testutils.rs  token.rs  types.rs  unwrap.rs  xdr.rs
stellar/otter-stellar-verify/src/soroban_env_common/: convert.rs  error.rs  mod.rs  num.rs  val.rs  wrapper_macros.rs
stellar/otter-stellar-verify/src/soroban_env_host/: data_helpers.rs  error.rs  frame.rs  host.rs  mod.rs  storage.rs  xdr.rs
stellar/otter-stellar-verify/src/soroban_ledger_snapshot/: mod.rs
stellar/otter-stellar-verify/tests/: atomic_swap.rs  storage.rs  token.rs
stellar/soroban-env-common/: Cargo.toml
stellar/soroban-env-common/src/: address.rs  enums.rs  env.rs  lib.rs  num.rs  storage.rs  string.rs  symbol.rs  token.rs  tuple.rs  val.rs  vec.rs
stellar/soroban-rs-spec/: Cargo.toml
stellar/soroban-rs-spec/src/: functions.rs  lib.rs  read.rs  trait.rs  types.rs
stellar/soroban-token-sdk/: Cargo.toml
stellar/soroban-token-sdk/src/: event.rs  lib.rs  metadata.rs  tokenutils.rs
stellar/stellar-sdk-macros/: Cargo.toml
stellar/stellar-sdk-macros/src/: lib.rs
stellar/tests/atomic-swap/: Cargo.toml
stellar/tests/atomic-swap/src/: lib.rs
stellar/tests/auth/: Cargo.toml
stellar/tests/auth/src/: lib.rs
stellar/tests/contract_types/: Cargo.toml
stellar/tests/contract_types/src/: lib.rs
stellar/tests/cross_contract/: Cargo.toml
stellar/tests/cross_contract/src/: lib.rs  soroban_cross_contract_a_contract.wasm
stellar/tests/custom_types/: Cargo.toml
stellar/tests/custom_types/src/: lib.rs
stellar/tests/deployer/: Cargo.toml
stellar/tests/deployer/src/: lib.rs
stellar/tests/errors/: Cargo.toml
stellar/tests/errors/src/: lib.rs
stellar/tests/events/: Cargo.toml
stellar/tests/events/src/: lib.rs
stellar/tests/increment/: Cargo.toml
stellar/tests/increment/src/: lib.rs
stellar/tests/simple_account/: Cargo.toml
stellar/tests/simple_account/src/: lib.rs
stellar/tests/token/: Cargo.toml
stellar/tests/token-bug-poc/: Cargo.toml  kani.rs
stellar/tests/token-bug-poc/src/: lib.rs
stellar/tests/token/src/: allowance.rs  contract.rs  storage_types.rs  test.rs
