[workspace]
resolver = "2"
members = [
    "stellar/otter-stellar-verify",
    "stellar/stellar-sdk-macros",
    "stellar/soroban-env-common",
    "stellar/soroban-token-sdk",
    "stellar/soroban-rs-spec",
    "stellar/tests/*"
]
exclude = [
    "dependencies",
]

[workspace.dependencies]
kani = { path = "./dependencies/kani/library/kani", features = ["concrete_playback"] }
num-traits = "0.2"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.108", features = ["full"] }

