[package]
name = "otter-stellar-verify"
version = "0.1.0"
edition = "2021"


[dependencies]
num-traits = "0.2"
num-derive = "0.4"
kani = { workspace = true, optional = true }
static_assertions = "1.1.0"
stellar-sdk-macros = { path = "../stellar-sdk-macros" }
sha2 = "0.9.0"

[features]
default = []
kani = ["dep:kani"]