[package]
name = "otter-stellar-verify"
version = "0.1.0"
edition = "2021"


[dependencies]
kani = { workspace = true, optional = true }
stellar-sdk-macros = { path = "../stellar-sdk-macros" }
soroban-env-common ={ path = "../soroban-env-common" }
stellar-xdr = { workspace = true }
rand =  "0.8"

[features]
default = []
kani = ["dep:kani", "soroban-env-common/kani" ]