[package]
name = "soroban-rs-spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = "0.2.4"
wasmparser = "0.88.0"
stellar-xdr = { workspace = true }