[package]
name = "stellar-sdk-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
darling = "0.20.0"
soroban-rs-spec = {path = "../soroban-rs-spec"}

[lib]
proc-macro = true