[package]
name = "soroban-events-contrac"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { package="otter-stellar-verify", path="../../otter-stellar-verify"}

[features]
kani = ["soroban-sdk/kani"]


